[tool.poetry]
name = "create-or-update-rapidapi"
version = "0.1.0"
description = "Create or update an API listing on RapidAPI Hub"
authors = ["Maxim Burgerhout <maxim@wzzrd.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "create_or_update_rapidapi"}]

[tool.poetry.dependencies]
python = "^3.8"
semver = "^2.13.0"
click = "^8.1.3"
gql = {extras = ["all"], version = "^3.4.0"}


[build-system]
requires = ["poetry-core=1.2.0"]
build-backend = "poetry.core.masonry.api"
